--- a/les5/index.html
+++ b/les5/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <ul class="cards">
-        <li class="card">
+        <li class="card card--first"></li>
+        <li class="card card--second"></li>
+        <li class="card card--third">
             <h2 id="js--pokemon-text">A wild Pokémon appeared!</h2>
             <img id="js--pokemon-image" src="" alt="">
             <button id="js--catch-button">Catch</button>
