--- a/les5/index.html
+++ b/les5/index.html
@@ -10,8 +10,14 @@
 </head>
 <body>
     <ul class="cards">
-        <li class="card card--first"></li>
-        <li class="card card--second"></li>
+        <li class="card card--first">
+            <h2 id="js--name">Search for a name</h2>
+            <input id="js--input" type="text">
+        </li>
+        <li class="card card--second">
+            <h1 id="js--show-title"></h1>
+            <p id="js--show-summary"></p>
+        </li>
         <li class="card card--third">
             <h2 id="js--pokemon-text">A wild Pokémon appeared!</h2>
             <img id="js--pokemon-image" src="" alt="">
