--- a/les7/index.html
+++ b/les7/index.html
@@ -11,7 +11,9 @@
     <main class="dashboard">
         <section class="section--first">
             <article class="card card--first">
-                <h2>21:41</h2>
+                <span id="hours">00</span>
+                <span>:</span>
+                <span id="minutes">00</span>
             </article>
             <article class="card card--second">
                 <canvas id="js--chart--1"></canvas>
@@ -28,7 +30,9 @@
                     <button class="button button--reset" id="js--reset">reset</button>
                 </section>
             </article>
-            <article class="card card--fourth"></article>    
+            <article class="card card--fourth">
+                <canvas id="js--chart--3"></canvas>
+            </article>    
         </section>
         <section class="section--second">
             <canvas id="js--chart--2"></canvas>
